# Self-Healing-Rag

./: .gitignore  Makefile  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: analyze.py  report.py  sessions.py  suggest.py  upload.py
backend/app/core/: dependencies.py  settings.py
backend/app/models/: schemas.py
backend/app/repositories/: sessions.py  transcripts.py
backend/app/services/: analysis.py  reporting.py  suggestions.py  transcription.py
frontend/: README.md
