[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairhire-backend"
version = "0.1.0"
description = "FairHire FastAPI backend skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "supabase>=2.6",
  "openai>=1.30",
  "groq>=0.9",
  "qdrant-client>=1.10",
  "sentence-transformers>=3.0",
  "transformers>=4.43",
  "torch>=2.3",
  "numpy>=1.26"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
